# hexlet-git

./: pyproject.toml
hexlet_django_blog/: settings.py  urls.py  views.py
hexlet_django_blog/article/: urls.py  views.py
hexlet_django_blog/templates/: about.html  base.html  index.html
