[tool.poetry]
name = "hexlet-django-blog"
version = "0.1.0"
description = ""
authors = ["admin <good-ok-73@rambler.ru>"]
readme = "README.md"
packages = [{include = "hexlet_django_blog"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
